# InstallOpenCV4

./: InstallOpenCV4.sh  OLD_InstallOpenCV4.sh  README.md
TestVideoCapture/: CMakeLists.txt  Makefile  main.cpp
